# MDM

./: .env.example  .gitignore  AUDITORIA-E-PLANO.md  CONTRIBUTING.md  GUIA-PASSO-A-PASSO-ESTAGIARIO.md  README.md  alembic.ini  avaliacoes.html  contactos.html  docker-compose.yml  index.html  instalacao-ar-condicionado.html  manutencao-assistencia.html  netlify.toml  orcamento.html  projetos.html  pyproject.toml  script.js  servicos.html  sobre.html  styles.css
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_stock.py  0003_agua.py
circuit-planner/: .gitignore  CLAUDE.md  README.md  circuit_planner.html  package.json
circuit-planner/test/: app_extracted.js  extract.js  onboarding.test.js  run.js  smoke.js
circuit-planner/tools/: sheet_ac.js  sheet_parts.js  sheets.js
docs/: design-tokens.md  handoff-notes.md  image-manifest.md  ux-mobile-redesign-spec.md
electric-simulator/: README.md  circuit.js  index.html  panel.html  panel.js  panel_model.js  simulator.js
electric-simulator/test/: circuit.test.mjs  panel.test.mjs
prototype/: README.md  extract_assets.py  index-editorial.html  index-hibrido.html  index-industrial.html  index.html
src/agua/: config.py  db.py  importer.py  main.py  models.py  overpass.py  seed.py
src/mdm/: config.py  db.py  main.py  models.py
src/stock/: db.py  (+3 more)
tests/: conftest.py  test_color_rules.py  test_parser.py  test_poller_idempotency.py  test_routes.py  test_simulator.py  test_threading.py
(+46 files in other folders)
